Fix menu collapse

--- a/src/main/resources/client/css/style.css
+++ b/src/main/resources/client/css/style.css
@@ -94,11 +94,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .menu-collapse {
-    display:inline;
-    padding:0 17px;
-    height:55px;
-    min-height:100%;
-    border-right:1px solid rgba(0,0,0,0.05);
+     border-right: 1px solid rgba(0, 0, 0, 0.05);
+     height: 100%;
+     min-height: 100%;
+     padding:0 17px;
+     display:inline;
 }
 
 @media(min-width:768px) {
